<resources>
    <string name="app_name">tarea</string>
    <string name="codCedula">Código de Cédula</string>
    <string name="codigo_cedula">123</string>
    <string name="departamento">Departamento</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="geolocation">Geolocalización</string>
    <string name="direction">Dirección</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="gps">GPS</string>
    <string name="guardar">Guardar</string>
    <string name="wallpapergoku">wallpaperGoku</string>
    <string name="dragon_ball_super">Dragon Ball Super</string>
    <string name="ultimos_capitulos">Revive los últimos capítulos</string>
    <string name="jiren_png">jiren.png</string>
    <string name="image_card">super.png</string>
    <string name="capitulo_126">Capitulo 126</string>
    <string name="title_127">¡El sacrificio de Vegeta!</string>
    <string name="capitulo_127">Capitulo 127</string>
    <string name="title_126">¡La última barrera!</string>
    <string name="title_129">¡Ultra Instinto Dominado!</string>
    <string name="title_128">¡La caída de Vegeta!</string>
    <string name="capitulo_128">Capitulo 128</string>
    <string name="capitulo_129">Capitulo 129</string>
    <string name="button">button</string>
    <string name="Proximamente">Proximamente</string>
    <string name="Event_name">Event name</string>
    <string name="location">Location</string>
    <string name="from">From</string>
    <string name="all_day">All Day</string>
    <string name="to">To</string>
    <string name="super_application">Super Application</string>
    <string name="logo_api">logo_api</string>
    <string name="arrow">arrow</string>
    <string name="check">check</string>
</resources>
